lab1/Test/L1-A-13-13.output
Error Type B at Line 7
Error Type B at Line 13
Error Type B at Line 18
Error Type A at Line 19
Error Type B at Line 29
Error Type A at Line 30
Error Type B at Line 36
