lab1/Test/L1-A-13-13.cmm
float HFJfZPg [ 1480445900 ] 
;
struct THQLg50nGSh ;
int uTAO0UTCZ2NO4ua , WIX2R9G 

;
&& struct {
}QxgOEqk_vIGf ( ) {
  int Dq , djx = E5MgsiEhU2mt6A || bgxzKjlRq7VLmGaS 
    == VDr - BZVecHW3 ( dncHPX0B_3qAuO , A3oocwtut = UIJ 
    && js != RxztxdfVe_htbKLHF + gTbooyFh * U [ Q6 = IjLaGZEO 
    && mwL8MWWEEnc >= ( WpfVtGPSn2o3PS8Uxb81 <= otYstnmvZ 
    + - ( = hTZwr6qUI99my || LgSof < t4up3p318bsWeFtkFz 
    ) * KX . xrI [ KqD2s0_8QB4gIyb ] . aGzj * 476144920 
    > 1091606967.1878557891 . B5_8t4QeNgdf ) ] ) / - ! 
    UbvifH73Qss9cs ( ) ;
}
int joh_1z_nDo0B ( int ) {
  int $rlYJXXleumpwye4kTfr7 ;
  struct moLO0LcTmj6pu {
    struct es_6xD56SqsyD Nx ;
    int FJNyVtz3et ;
    int SoA8Fg7EcpOSlLNK ;
    int wgv3dNo5hjYMWuhxQ ;
    int qCD2j2lllgkyFFZp ;
  }SO8PTcF2Iv4pQqDvrLf ;
  aCzK ;
  if ( f_3wa9aPtnIavFGFhzy )   VI ;
else   if ( VExdZ4J5VsXCbosVbdXF   if ( anyy_Pnd6h2C7Jec 
    )   while ( fmEh0dSvYa6CmR0mGB )   USbr02jdGsn %;

else {
  }


  return ;
}
struct FyAztyPHC__Gp4 ;
int G ( int g7p , int AJkv6O3EogR ) {
}
